@@ -2,22 +2,37 @@ package ua.com.up_site.guiderenttest.places;
 
 import android.annotation.SuppressLint;
 import android.content.Context;
+import android.content.Intent;
+import android.graphics.Bitmap;
 import android.location.Address;
 import android.location.Geocoder;
 import android.media.ExifInterface;
 import android.net.Uri;
 import android.os.Bundle;
 import android.support.annotation.NonNull;
-import android.support.v4.app.Fragment;
+import android.support.design.widget.FloatingActionButton;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
 import android.widget.AdapterView;
 import android.widget.ArrayAdapter;
+import android.widget.EditText;
 import android.widget.ImageView;
 import android.widget.Spinner;
 import android.widget.Toast;
 
+import com.google.android.gms.common.GooglePlayServicesNotAvailableException;
+import com.google.android.gms.common.GooglePlayServicesRepairableException;
+import com.google.android.gms.location.places.GeoDataClient;
+import com.google.android.gms.location.places.Place;
+import com.google.android.gms.location.places.PlacePhotoMetadata;
+import com.google.android.gms.location.places.PlacePhotoMetadataBuffer;
+import com.google.android.gms.location.places.PlacePhotoMetadataResponse;
+import com.google.android.gms.location.places.PlacePhotoResponse;
+import com.google.android.gms.location.places.Places;
+import com.google.android.gms.location.places.ui.PlacePicker;
+import com.google.android.gms.tasks.OnCompleteListener;
+import com.google.android.gms.tasks.Task;
 import com.vansuita.pickimage.bean.PickResult;
 import com.vansuita.pickimage.bundle.PickSetup;
 import com.vansuita.pickimage.dialog.PickImageDialog;
@@ -29,21 +44,50 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 
+import butterknife.BindView;
+import butterknife.ButterKnife;
+import butterknife.OnClick;
+import butterknife.Unbinder;
 import ua.com.up_site.guiderenttest.MainActivity;
 import ua.com.up_site.guiderenttest.R;
 
+import static android.app.Activity.RESULT_OK;
 
-public class PlaceEditFragment extends Fragment {
+
+public class PlaceEditFragment extends android.support.v4.app.Fragment {
     // TODO: Rename parameter arguments, choose names that match
     // the fragment initialization parameters, e.g. ARG_ITEM_NUMBER
     private static final String ARG_PARAM1 = "param1";
     private static final String ARG_PARAM2 = "param2";
+    int PLACE_PICKER_REQUEST = 1;
 
     // TODO: Rename and change types of parameters
     private String mParam1;
     private String mParam2;
 
+    private Unbinder unbinder;
+
+    @Override
+    public void onDestroyView() {
+        super.onDestroyView();
+        unbinder.unbind();
+    }
+
+    @BindView(R.id.fabMapPlaceEdit)
+    FloatingActionButton fabMapPlaceEdit;
+
+    @BindView(R.id.placeEditName)
+    EditText placeEditName;
+
+    @BindView(R.id.placeEditImage)
+    ImageView placeEditImage;
+
+    private GeoDataClient mGeoDataClient;
+
+
     List<String> categories = new ArrayList<>();
+
+    String googlePlaceID;
 
     ImageView imageView;
     com.seatgeek.placesautocomplete.PlacesAutocompleteTextView addressACTV;
@@ -56,14 +100,6 @@ public class PlaceEditFragment extends Fragment {
         // Required empty public constructor
     }
 
-    /**
-     * Use this factory method to create a new instance of
-     * this fragment using the provided parameters.
-     *
-     * @param param1 Parameter 1.
-     * @param param2 Parameter 2.
-     * @return A new instance of fragment PlaceEditFragment.
-     */
     // TODO: Rename and change types and number of parameters
     public static PlaceEditFragment newInstance(String param1, String param2) {
         PlaceEditFragment fragment = new PlaceEditFragment();
@@ -101,15 +137,17 @@ public class PlaceEditFragment extends Fragment {
     public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container,
                              Bundle savedInstanceState) {
         // Inflate the layout for this fragment
-        final View rootview = inflater.inflate(R.layout.fragment_place_edit, container, false);
-
+        final View rootView = inflater.inflate(R.layout.fragment_place_edit, container, false);
+        unbinder = ButterKnife.bind(this, rootView);
 
         ((MainActivity) getActivity()).toolbar_title.setText("Place Edit");
 
         initializeCategories();
 
-        addressACTV = rootview.findViewById(R.id.placeAutoComplete);
-        imageView = rootview.findViewById(R.id.guideProfileImage);
+        mGeoDataClient = Places.getGeoDataClient(getContext());
+
+        addressACTV = rootView.findViewById(R.id.placeAutoComplete);
+        imageView = rootView.findViewById(R.id.placeEditImage);
 
         imageView.setOnClickListener(new View.OnClickListener() {
             @Override
@@ -165,7 +203,7 @@ public class PlaceEditFragment extends Fragment {
                                                 addressACTV.setText(address);
                                                 addressACTV.setSelection(addressACTV.getText().length());
                                             }
-                                        },500);
+                                        }, 500);
 
 
                                     } catch (NullPointerException e) {
@@ -186,15 +224,12 @@ public class PlaceEditFragment extends Fragment {
             }
         });
 
-        Spinner spinner = rootview.findViewById(R.id.placeCategorySpinner);
+        Spinner spinner = rootView.findViewById(R.id.placeCategorySpinner);
         spinner.setOnItemSelectedListener(new AdapterView.OnItemSelectedListener() {
             @Override
             public void onItemSelected(AdapterView<?> parent, View view, int position, long id) {
                 // On selecting a spinner item
                 String item = parent.getItemAtPosition(position).toString();
-
-                // Showing selected spinner item
-                Toast.makeText(parent.getContext(), "Selected: " + item, Toast.LENGTH_LONG).show();
             }
 
             @Override
@@ -208,9 +243,59 @@ public class PlaceEditFragment extends Fragment {
         spinner.setAdapter(dataAdapter);
 
 
-        return rootview;
+        return rootView;
     }
 
+    @OnClick(R.id.fabMapPlaceEdit)
+    void fabMapPlaceEditOnClick(View view) {
+        PlacePicker.IntentBuilder builder = new PlacePicker.IntentBuilder();
+        try {
+            startActivityForResult(builder.build(getActivity()), PLACE_PICKER_REQUEST);
+        } catch (GooglePlayServicesRepairableException e) {
+            e.printStackTrace();
+        } catch (GooglePlayServicesNotAvailableException e) {
+            e.printStackTrace();
+        }
+    }
+
+    public void onActivityResult(final int requestCode, int resultCode, Intent data) {
+        if (requestCode == PLACE_PICKER_REQUEST) {
+            if (resultCode == RESULT_OK) {
+                Place place = PlacePicker.getPlace(getContext(), data);
+                addressACTV.setText(place.getAddress());
+                placeEditName.setText(place.getName());
+                googlePlaceID = place.getId();
+                mGeoDataClient.getPlacePhotos(googlePlaceID).addOnCompleteListener(new OnCompleteListener<PlacePhotoMetadataResponse>() {
+                    @Override
+                    public void onComplete(@NonNull Task<PlacePhotoMetadataResponse> task) {
+                        PlacePhotoMetadataResponse response = task.getResult();
+                        PlacePhotoMetadataBuffer buffer = response.getPhotoMetadata();
+                        PlacePhotoMetadata photoMetadata = null;
+                        try {
+                            photoMetadata = buffer.get(0);
+                        } catch (Exception e) {
+                            e.printStackTrace();
+                        }
+                        if (photoMetadata != null) {
+                            CharSequence attribution = photoMetadata.getAttributions();
+                            Task<PlacePhotoResponse> photoResponse = mGeoDataClient.getPhoto(photoMetadata);
+                            photoResponse.addOnCompleteListener(new OnCompleteListener<PlacePhotoResponse>() {
+                                @Override
+                                public void onComplete(@NonNull Task<PlacePhotoResponse> task) {
+                                    PlacePhotoResponse photo = task.getResult();
+                                    Bitmap bitmap = photo.getBitmap();
+                                    placeEditImage.setImageBitmap(bitmap);
+                                }
+                            });
+                        }
+                    }
+                });
+
+                String toastMsg = String.format("PlaceId: %s", googlePlaceID);
+                Toast.makeText(getContext(), toastMsg, Toast.LENGTH_LONG).show();
+            }
+        }
+    }
 
     @Override
     public void onAttach(Context context) {
@@ -240,21 +325,21 @@ public class PlaceEditFragment extends Fragment {
         String[] DMS = stringDMS.split(",", 3);
 
         String[] stringD = DMS[0].split("/", 2);
-        Double D0 = new Double(stringD[0]);
-        Double D1 = new Double(stringD[1]);
+        Double D0 = Double.valueOf(stringD[0]);
+        Double D1 = Double.valueOf(stringD[1]);
         Double FloatD = D0 / D1;
 
         String[] stringM = DMS[1].split("/", 2);
-        Double M0 = new Double(stringM[0]);
-        Double M1 = new Double(stringM[1]);
+        Double M0 = Double.valueOf(stringM[0]);
+        Double M1 = Double.valueOf(stringM[1]);
         Double FloatM = M0 / M1;
 
         String[] stringS = DMS[2].split("/", 2);
-        Double S0 = new Double(stringS[0]);
-        Double S1 = new Double(stringS[1]);
+        Double S0 = Double.valueOf(stringS[0]);
+        Double S1 = Double.valueOf(stringS[1]);
         Double FloatS = S0 / S1;
 
-        result = new Double(FloatD + (FloatM / 60) + (FloatS / 3600));
+        result = FloatD + (FloatM / 60) + (FloatS / 3600);
 
         return result;
     }
